--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ if(!isset($_SESSION['admin_name'])){
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Page</title>
+    <title>Complete Responsive Online Boot Store Website Design Tutorial</title>
 
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 
@@ -139,7 +139,7 @@ if(!isset($_SESSION['admin_name'])){
             <label for="remember-me"> remember me</label>
         </div>
         <p>forget password ? <a href="#">click here</a></p>
-        <p>don't have an account ? <a href="#register_form.php">create one</a></p>
+        <p>don't have an account ? <a href="#">create one</a></p>
     </form>
 
 </div>
@@ -152,7 +152,7 @@ if(!isset($_SESSION['admin_name'])){
 
         <div class="content">
             <h3>upto 75% off</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam deserunt nostrum accusamus. Nam alias sit necessitatibus, aliquid ex minima at!</p>
+            <p>Get Upto 75 % Off On Any 5 Purchases On Any combination of literature and mythological books</p>
             <a href="#" class="btn">shop now</a>
         </div>
 
@@ -612,7 +612,7 @@ if(!isset($_SESSION['admin_name'])){
     <div class="content">
         <h3>deal of the day</h3>
         <h1>upto 50% off</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde perspiciatis in atque dolore tempora quaerat at fuga dolorum natus velit.</p>
+        <p>Get upto 50 % off on any 5 purchases on any generic</p>
         <a href="#" class="btn">shop now</a>
     </div>
 
@@ -637,7 +637,7 @@ if(!isset($_SESSION['admin_name'])){
             <div class="swiper-slide box">
                 <img src="image/pic-1.png" alt="">
                 <h3>john deo</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur nihil ipsa placeat. Aperiam at sint, eos ex similique facere hic.</p>
+                <p>"One glance at a book and you hear the voice of another person, perhaps someone dead for 1,000 years. To read is to voyage through time." .</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -649,8 +649,8 @@ if(!isset($_SESSION['admin_name'])){
 
             <div class="swiper-slide box">
                 <img src="image/pic-2.png" alt="">
-                <h3>john deo</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur nihil ipsa placeat. Aperiam at sint, eos ex similique facere hic.</p>
+                <h3>Amelia</h3>
+                <p>My memoir, HEART THIEVES, the book you helped me to submit, has been awarded GOLD in the 2021 Royal Palm Literary Awards in the memoir genre. I am thrilled. Linda B.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -662,9 +662,8 @@ if(!isset($_SESSION['admin_name'])){
 
             <div class="swiper-slide box">
                 <img src="image/pic-3.png" alt="">
-                <h3>john deo</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur nihil ipsa placeat. Aperiam at sint, eos ex similique facere hic.</p>
-                <div class="stars">
+                <h3>Oliver</h3>
+                <p>Couldn’t be happier with this group of highly skilled industry professionals! I signed with an agent within weeks of joining. Top notch service and a virtual shoulder to lean on, when needed. Eve R.</p>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -674,8 +673,8 @@ if(!isset($_SESSION['admin_name'])){
             </div>
             <div class="swiper-slide box">
                 <img src="image/pic-4.png" alt="">
-                <h3>john deo</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur nihil ipsa placeat. Aperiam at sint, eos ex similique facere hic.</p>
+                <h3>Ava</h3>
+                <p>It has been very efficient and quick in their outreach to the agents. I’m pleasantly surprised! Jenafor R.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -687,8 +686,8 @@ if(!isset($_SESSION['admin_name'])){
 
             <div class="swiper-slide box">
                 <img src="image/pic-5.png" alt="">
-                <h3>john deo</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur nihil ipsa placeat. Aperiam at sint, eos ex similique facere hic.</p>
+                <h3>Ethan</h3>
+                <p>I’m a successful client in that you guys helped me find my agent, who helped me get my book published.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -700,8 +699,8 @@ if(!isset($_SESSION['admin_name'])){
 
             <div class="swiper-slide box">
                 <img src="image/pic-6.png" alt="">
-                <h3>john deo</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur nihil ipsa placeat. Aperiam at sint, eos ex similique facere hic.</p>
+                <h3>Clara</h3>
+                <p>>When I began, I was unfamiliar with the publishing world. I had no idea how to go about finding an agent. Thanks to your company, the employee’s professionalism, know-how and personal support I have found an agent for my book, Charlemagne, the Stolen History, an excellent agent at that. The contract is signed!.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -734,8 +733,9 @@ if(!isset($_SESSION['admin_name'])){
                     <img src="image/blog-1.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>blog title goes here</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, odio.</p>
+                    <h3>The Summer I Turned Pretty Book vs TV Show
+                        </h3>
+                    <p>Belly a.k.a Isabel’s life is all about her summer break. She just loves that time of the year, because, for her, it is the time for fun, family, and relaxation. It is the time when memories, that will last her a lifetime, are created. So, for her, everything best happens during those blissful months from June to August.</p>
                     <a href="#" class="btn">read more</a>
                 </div>
             </div>
@@ -745,8 +745,8 @@ if(!isset($_SESSION['admin_name'])){
                     <img src="image/blog-2.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>blog title goes here</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, odio.</p>
+                    <h3>Food-themed fiction novels for every hungry reader</h3>
+                    <p>Whenever we are asked about our favourite cuisine, we respond with a story in our heads relating to that food. Food has long served as a source of sustenance for humans and inspiration for some incredible works of art. So let me ask you a question. Are you a foodie?.</p>
                     <a href="#" class="btn">read more</a>
                 </div>
             </div>
@@ -756,8 +756,9 @@ if(!isset($_SESSION['admin_name'])){
                     <img src="image/blog-3.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>blog title goes here</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, odio.</p>
+                    <h3>The Immortal Secret Mantra – The Recipe | Vivek Shukla | Book Review
+                    </h3>
+                    <p>“Gorakhnath is watching you; whether you have that faith, that burning desire inside you – that is why he is giving you hints. The moments he finds that your faith is shaken or that burning desire has extinguished in the face of extreme adversities – you will stop getting any hints from him…”.</p>
                     <a href="#" class="btn">read more</a>
                 </div>
             </div>
@@ -767,8 +768,8 @@ if(!isset($_SESSION['admin_name'])){
                     <img src="image/blog-4.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>blog title goes here</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, odio.</p>
+                    <h3>The Do-Over | Lynn Painter</h3>
+                    <p>“You get what I mean. On a normal day when you’re feeling less than positive, force yourself to change your thinking. Instead of ‘It sucks that I have to go to school,’ think ‘It’s such a nice day that maybe after school I will recline the seat of my truck and read a good book while the breeze still smells like springtime.”</p>
                     <a href="#" class="btn">read more</a>
                 </div>
             </div>
@@ -778,8 +779,8 @@ if(!isset($_SESSION['admin_name'])){
                     <img src="image/blog-5.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>blog title goes here</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, odio.</p>
+                    <h3>Bad Liars – One Murder Three Liars | Vikrant Khanna |</h3>
+                    <p>There is always something about a closed-room murder mystery with a whodunit situation. If done just right, it’s a classic recipe for an entertaining thriller. So, when I came across one, that too by an Indian author, I knew I had to read it. And that’s how my journey of reading Vikrant Khanna’s Bad Liars – One Murder Three Liars began.</p>
                     <a href="#" class="btn">read more</a>
                 </div>
             </div>
