--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@ if(!isset($_SESSION['admin_name'])){
         <a href="#" class="fab fa-pinterest"></a>
     </div>
 
-    <div class="credit"> created by <span>mr. web designer</span> | all rights reserved! </div>
+   <--!<div class="credit"> created by <span>mr. web designer</span> | all rights reserved! </div>!-->
 
 </section>
 
